<resources>
    <string name="app_name">Sence</string>
    <string name="title_home">推荐</string>
    <string name="title_vip">会员</string>
    <string name="title_kind">商品分类</string>
    <string name="title_bus">购物车</string>
    <string name="title_user">我的</string>
    <string name="main_search_hint">秋冬润唇膏大全</string>
    <string name="hint_name">阿里山</string>
    <string name="hint_describe">我爱中国</string>
    <string name="hint_content">我爱中国，中国给予我强大的力量，和勇气。我是他的小宝宝，我爱她。</string>
    <string name="hint_num">99+</string>
    <string name="hint_price">￥0.00</string>
    <string name="hint_phone">13718480165</string>
    <string name="hint_time">昨天 12:30</string>

    <string name="album_view">选择图片</string>
    <string name="image_view">单击选择</string>
    <string name="add">确定</string>
    <string name="selected">已选</string>
    <string name="limit_exceeded">最多能选3张</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="translation_focus_name">translation_focus</string>
    <string name="translation_note_name">translation_note</string>
    <string name="translation_recommend_name">translation_recommend</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="custom_img_behavior">com.sence.view.behavior.ImageBehavior</string>
    <string name="custom_text_behavior">com.sence.view.behavior.TextViewBehavior</string>
    <string name="custom_layout_behavior">com.sence.view.behavior.RelativeBehavior</string>

    <!--权限-->
    <string name="permission_title">权限管理</string>
    <string name="permission_cancel">拒绝</string>
    <string name="permission_summit">去设置</string>
    <string name="permission_phone_call">您拒绝了电话权限，导致通话功能异常!</string>
    <string name="permission_camera">您拒绝了拍照，相机权限，导致拍照功能异常!</string>
    <string name="permission_contacts">您拒绝了联系人权限，无法获取联系人信息!</string>
    <string name="permission_recode_video">您拒绝了录制视频权限，无法录制视频!</string>
    <string name="permission_phone_state">只有获取手机设备号权限，您才可以登录Sence！</string>
    <string name="permission_location">同意获取位置信息，才可以发布服务，方便其他人更快找到你</string>
    <string name="permission_phone_state_normal">检验IMEL和IMSI码，防止账号被盗</string>
    <string name="permission_write">您拒绝了写入sdk权限，无法写入sdk!</string>
</resources>
