<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_selector"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_vip_selector"
            android:title="@string/title_vip"/>

    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_kind_selector"
            android:title="@string/title_kind"/>
    <item
            android:id="@+id/navigation_bus"
            android:icon="@drawable/ic_bus_selector"
            android:title="@string/title_bus"/>
    <item
            android:id="@+id/navigation_user"
            android:icon="@drawable/ic_user_selector"
            android:title="@string/title_user"/>

</menu>
