<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@drawable/shape_round"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <com.sence.view.NiceImageView
            android:id="@+id/item_img"
            app:corner_top_left_radius="4dp"
            app:corner_top_right_radius="4dp"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:transitionName="@string/translation_focus_name"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginTop="15dp"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:text="@string/hint_describe"
            android:id="@+id/item_describe"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:maxLines="2"
            android:textColor="#333333"
            android:ellipsize="end"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    <RelativeLayout
            android:layout_marginLeft="9dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_height="23dp">

        <com.sence.view.NiceImageView
                android:id="@+id/item_head"
                app:is_circle="true"
                android:scaleType="centerCrop"
                android:src="@drawable/hint_img"
                android:layout_width="23dp"
                android:layout_height="23dp"/>

        <TextView
                android:text="@string/hint_name"
                android:layout_marginLeft="5dp"
                android:textSize="12sp"
                android:textColor="#7e7e7e"
                android:id="@+id/item_name"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/item_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/item_support"
                android:text="@string/hint_num"
                android:layout_alignParentRight="true"
                android:drawablePadding="5dp"
                android:textSize="12sp"
                android:textColor="#5f5f5f"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/selecte_main_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>