<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

        <com.sence.view.NiceImageView
                android:layout_width="45dp"
                app:is_circle="true"
                android:id="@+id/item_img"
                android:layout_marginLeft="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/hint_img"
                android:layout_height="45dp"/>

        <TextView
                android:id="@+id/item_name"
                android:layout_toRightOf="@id/item_img"
                android:layout_alignTop="@id/item_img"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="8dp"
                android:textSize="14sp"
                android:textColor="#6d6e6f"
                android:text="@string/hint_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/item_time"
                android:layout_toRightOf="@id/item_img"
                android:layout_alignBottom="@id/item_img"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="8dp"
                android:textSize="12sp"
                android:textColor="#979797"
                android:text="@string/hint_time"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <ImageView
                android:id="@+id/item_support_img"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/selecte_main_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/item_support"
                android:layout_toLeftOf="@id/item_support_img"
                android:layout_marginRight="4dp"
                android:text="@string/hint_num"
                android:layout_centerVertical="true"
                android:textSize="12sp"
                android:textColor="#7e7e7e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <!--#507daf回复人名字颜色-->
    <com.sence.view.MyTextView
            android:id="@+id/item_content"
            android:layout_marginLeft="68dp"
            android:text="@string/hint_content"
            android:textSize="15sp"
            android:layout_marginRight="15dp"
            android:textColor="#323234"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <com.sence.view.MyTextView
            android:id="@+id/item_replay_content"
            android:layout_marginLeft="68dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_rect_comment_blue"
            android:layout_width="match_parent"
            android:textColor="#7e7e80"
            android:padding="7dp"
            android:text="@string/hint_content"
            android:layout_height="wrap_content"/>
</LinearLayout>