<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:context=".MainActivity">

        <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                />

        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/shape_bottom_shader"/>

        <LinearLayout
                android:elevation="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

            <LinearLayout
                    android:id="@+id/main_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                <ImageView
                        android:src="@drawable/ic_home_selector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_home"
                        android:textSize="12sp"
                        android:textColor="@color/color_state_menu_navi"
                        />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/main_vip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                <ImageView
                        android:src="@drawable/ic_vip_selector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_vip"
                        android:textSize="12sp"
                        android:textColor="@color/color_state_menu_navi"
                        />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/main_kind"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                <ImageView
                        android:src="@drawable/ic_kind_selector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_kind"
                        android:textSize="12sp"
                        android:textColor="@color/color_state_menu_navi"
                        />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/main_bus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                <ImageView
                        android:src="@drawable/ic_bus_selector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_bus"
                        android:textSize="12sp"
                        android:textColor="@color/color_state_menu_navi"
                        />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/main_user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                <ImageView
                        android:src="@drawable/ic_user_selector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_user"
                        android:textSize="12sp"
                        android:textColor="@color/color_state_menu_navi"
                        />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <include
            layout="@layout/bottom_sheet_release"
            android:visibility="gone"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>